# models/user.go
@@ -1,0 +1,14 @@
+package models
+
+import (
+	"time"
+)
+
+type User struct {
+	ID        uint      `gorm:"primaryKey" json:"id"`
+	Username  string    `gorm:"unique;not null" json:"username"`
+	Email     string    `gorm:"unique;not null" json:"email"`
+	Password  string    `gorm:"not null" json:"password"`
+	Role      string    `gorm:"default:'free'" json:"role"`
+	CreatedAt time.Time `json:"created_at"`
+}
